syntax = "proto3";

package com.epam.grpc.proto;

option java_multiple_files = true;
option java_package = "com.epam.grpc.proto";

service HelloService {
  rpc getData (DataRequest) returns (DataResponse) {
  }
}

message DataRequest {
  string id = 1;
}

message DataResponse {
  string message = 1;
}